--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<div class="about-section-left">
 					<img src="./images/placeholder-about-food.jpg" class="about-section-image"></img>
 				</div>
-
+		
 				<div class="about-section-right">
 					<p class="about-title">All About Restaurant</p>
 					<p class="about-text">We have been serving irresitable comfort food since 1999. Our mission is to keep you smiling with every bite.</p>
@@ -68,6 +68,7 @@
 				<button class="what-we-offer-menu-button">View Full Menu</button>
 			</div>
 		</div>
+		
 
 		<div class="clients-say-section-background">
 			<!-- What Clients Say -->
@@ -110,11 +111,12 @@
 				</div>
 			</div>
 		</div>
+		
 
 		<!-- Location/Hours/contact -->
 		<div class="restaurant-information-section-background">
 			<div class="restaurant-information-section">
-				<div>
+				<div class="restaurant-information-section-image-container">
 					<img src="./images/placeholder-restaurant.jpg" class="restaurant-information-section-image"></img>
 				</div>
 
