--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 		<title>Restaurant Website</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="./styles/styles.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Telex&display=swap" rel="stylesheet">
+		<script src="./scripts/scripts.js"></script>
 		
 	</head>
 	<body>
@@ -34,7 +38,7 @@
 			<!-- About -->
 			<div class="about-section">
 				<div class="about-section-left">
-					<img src="./images/placeholder-about-food.jpg" class="about-section-image"></img>
+					<img src="./images/placeholder-about-food.jpg" class="about-section-image image-slide-scroll"></img>
 				</div>
 		
 				<div class="about-section-right">
@@ -52,15 +56,15 @@
 				<p class="what-we-offer-title">What We Offer</p>
 				<p class="what-we-offer-text">Curious? Here are our most popular menu items.</p>
 				<div class="what-we-offer-box-container">
-					<div class="what-we-offer-box">
+					<div class="what-we-offer-box pop-on-scroll">
 						<img src="./images/placeholder-burger.png" class="what-we-offer-box-image"></img>
 						<p>Gourmet Burgers</p>
 					</div>
-					<div class="what-we-offer-box">
+					<div class="what-we-offer-box pop-on-scroll">
 						<img src="./images/placeholder-burger.png" class="what-we-offer-box-image"></img>
 						<p>Gourmet Burgers</p>
 					</div>
-					<div class="what-we-offer-box">
+					<div class="what-we-offer-box pop-on-scroll">
 						<img src="./images/placeholder-burger.png" class="what-we-offer-box-image"></img>
 						<p>Gourmet Burgers</p>
 					</div>
@@ -75,7 +79,7 @@
 			<div class="clients-say-section">
 				<p class="clients-say-title">What Our Clients Say</p>
 				<div class="clients-say-box-container">
-					<div class="clients-say-box">
+					<div class="clients-say-box fade-in-on-scroll">
 						<p class="clients-say-box-name">Joe Doe</p>
 						<p>Testimonials are short quotes from people who love your brand. It's a great way to convince customers to try your services.</p>
 						<div>
@@ -86,7 +90,7 @@
 							<i class="fa fa-star" style="font-size:24px;color: yellow;"></i>
 						</div>
 					</div>
-					<div class="clients-say-box">
+					<div class="clients-say-box fade-in-on-scroll">
 						<p class="clients-say-box-name">Joe Doe</p>
 						<p>Testimonials are short quotes from people who love your brand. It's a great way to convince customers to try your services.</p>
 						<div>
@@ -97,7 +101,7 @@
 							<i class="fa fa-star" style="font-size:24px;color: yellow;"></i>
 						</div>
 					</div>
-					<div class="clients-say-box">
+					<div class="clients-say-box fade-in-on-scroll">
 						<p class="clients-say-box-name">Joe Doe</p>
 						<p>Testimonials are short quotes from people who love your brand. It's a great way to convince customers to try your services.</p>
 						<div>
@@ -117,7 +121,7 @@
 		<div class="restaurant-information-section-background">
 			<div class="restaurant-information-section">
 				<div class="restaurant-information-section-image-container">
-					<img src="./images/placeholder-restaurant.jpg" class="restaurant-information-section-image"></img>
+					<img src="./images/placeholder-restaurant.jpg" class="restaurant-information-section-image slide-down-on-scroll"></img>
 				</div>
 
 				<div class="restaurant-information-section-container">
