--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
 			</div>
 		</div>
 
+		<div class="footer-section">
+			<a href="https://mantissoftware.io/">Developed by Mantis Software LLC.</a>
+		</div>
+
 
 	</body>
 </html>
